crates/nidus/tests/ui/pipe_outside_route_method.rs
use nidus::prelude::*;

struct ValidationPipe;

#[pipe(ValidationPipe)]
fn piped() {}

fn main() {}
